--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.2.0",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
